cmk.server_side_programs: add most basic test
CMK-28526

Change-Id: I0a796ba1513542b03cce51b993a3d0b9626d5959

--- a/packages/cmk-plugin-apis/BUILD
+++ b/packages/cmk-plugin-apis/BUILD
@@ -284,6 +284,7 @@ py_test(
         ":__test__",
         ":server_side_programs",
         requirement("pytest"),
+        requirement("requests"),
     ],
 )
 
