move legacy conversion
Move the conversion of legacy to recent results
to the API package.

Change-Id: I84c7780ae6480ad258736f65650a58498906c954

--- a/packages/cmk-plugin-apis/BUILD
+++ b/packages/cmk-plugin-apis/BUILD
@@ -17,6 +17,7 @@ py_library(
     srcs = [
         "cmk/agent_based/legacy/__init__.py",
         "cmk/agent_based/legacy/_loading.py",
+        "cmk/agent_based/legacy/conversion.py",
         "cmk/agent_based/legacy/v0_unstable.py",
         "cmk/agent_based/prediction_backend.py",
         "cmk/agent_based/v1/__init__.py",
