cmk.server_side_programs: add missing requirement
It seems the missing requirement is masked
by either vcrpy or requests.

CMK-28526

Change-Id: I40e32ea5df1f49c843306fa2b045c39062015ba3

--- a/packages/cmk-plugin-apis/BUILD
+++ b/packages/cmk-plugin-apis/BUILD
@@ -161,6 +161,7 @@ py_library(
     visibility = ["//visibility:public"],
     deps = [
         requirement("requests"),
+        requirement("urllib3"),
         requirement("vcrpy"),
     ],
 )
