--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -9,7 +9,7 @@ repo_license = use_repo_rule("//bazel/rules:repo_license.bzl", "detect_repo_lice
 bazel_dep(name = "asio", version = "1.34.2.cmk.1")
 bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
 bazel_dep(name = "aspect_rules_js", version = "2.3.7")
-bazel_dep(name = "aspect_rules_lint", version = "1.10.2")
+bazel_dep(name = "aspect_rules_lint", version = "2.0.0-beta.0")
 bazel_dep(name = "aspect_rules_py", version = "1.5.2")
 bazel_dep(name = "aspect_rules_ts", version = "3.6.0")
 bazel_dep(name = "aspect_rules_webpack", version = "0.17.0")
@@ -117,12 +117,11 @@ single_version_override(
     module_name = "aspect_rules_lint",
     patch_strip = 1,
     patches = [
+        # https://github.com/aspect-build/rules_lint/pull/597
         "//bazel/patches:rules_lint-clang_tidy.patch",
-        # quickfix non-erroneous return code on linting with ruff
-        # https://github.com/aspect-build/rules_lint/issues/495
-        "//bazel/patches:rules_lint-ruff_quickfix.patch",
         "//bazel/patches:rules_lint-groovy.patch",
     ],
+    version = "2.0.0-beta.0",
 )
 
 single_version_override(
