Add `allow_empty` to glob using files generated elsewhere
fix `bazel cquery ...`

Change-Id: I8a43299fc5c0403946652dae29bb58ffed3876b2

--- a/agents/BUILD
+++ b/agents/BUILD
@@ -17,10 +17,14 @@ filegroup(
         "mk-job.aix",
         "mk-job.solaris",
         "waitmax",
-    ] + glob([
-        "check-mk-agent-*.noarch.rpm",
-        "check-mk-agent_*_all.deb",
-    ]),
+    ] + glob(
+        [
+            "check-mk-agent-*.noarch.rpm",
+            "check-mk-agent_*_all.deb",
+        ],
+        # Files created elsewhere
+        allow_empty = True,
+    ),
     visibility = ["//omd:__subpackages__"],
 )
 
