Improve macro to test with multiple python versions
Change-Id: I7e456ba5e21ccf3bf82deb4c8284a0117ee9f14f

--- a/tests/agent-plugin-unit/BUILD
+++ b/tests/agent-plugin-unit/BUILD
@@ -5,7 +5,7 @@ load("@agent_plugins_requirements_3_13//:requirements.bzl", req_3_13 = "requirem
 load("@agent_plugins_requirements_3_8//:requirements.bzl", req_3_8 = "requirement")
 load("@agent_plugins_requirements_3_9//:requirements.bzl", req_3_9 = "requirement")
 load("@rules_uv//uv:pip.bzl", "pip_compile")
-load("//bazel/rules:py_test_under_py_version_macro.bzl", "py_test_under_py_version")
+load("//bazel/rules:py_tests_for_python_versions.bzl", "py_tests_for_python_versions")
 
 RUNTIME_REQUIREMENTS = [
     "pytest-mock",
@@ -55,92 +55,25 @@ pip_compile(
     requirements_txt = ":requirements_3_13.txt",
 )
 
-py_test_under_py_version(
-    name = "py-3.8",
-    srcs = glob(["test_*.py"]),
-    data = glob(["datasets/**/*"]),
-    python_version = "3.8",
-    deps = [
-        req_3_8(req)
-        for req in RUNTIME_REQUIREMENTS
-    ] + [
-        "//agents/plugins:agent-plugins",
-    ],
-)
-
-py_test_under_py_version(
-    name = "py-3.9",
-    srcs = glob(["test_*.py"]),
-    data = glob(["datasets/**/*"]),
-    python_version = "3.9",
-    deps = [
-        req_3_9(req)
-        for req in RUNTIME_REQUIREMENTS
-    ] + [
-        "//agents/plugins:agent-plugins",
-    ],
-)
-
-py_test_under_py_version(
-    name = "py-3.10",
-    srcs = glob(["test_*.py"]),
-    data = glob(["datasets/**/*"]),
-    python_version = "3.10",
-    deps = [
-        req_3_10(req)
-        for req in RUNTIME_REQUIREMENTS
-    ] + [
-        "//agents/plugins:agent-plugins",
-    ],
-)
-
-py_test_under_py_version(
-    name = "py-3.11",
-    srcs = glob(["test_*.py"]),
-    data = glob(["datasets/**/*"]),
-    python_version = "3.11",
-    deps = [
-        req_3_11(req)
-        for req in RUNTIME_REQUIREMENTS
-    ] + [
-        "//agents/plugins:agent-plugins",
-    ],
-)
-
-py_test_under_py_version(
-    name = "py-3.12",
-    srcs = glob(["test_*.py"]),
-    data = glob(["datasets/**/*"]),
-    python_version = "3.12",
-    deps = [
-        req_3_12(req)
-        for req in RUNTIME_REQUIREMENTS
-    ] + [
-        "//agents/plugins:agent-plugins",
-    ],
-)
-
-py_test_under_py_version(
-    name = "py-3.13",
-    srcs = glob(["test_*.py"]),
-    data = glob(["datasets/**/*"]),
-    python_version = "3.13",
-    deps = [
-        req_3_13(req)
-        for req in RUNTIME_REQUIREMENTS
-    ] + [
-        "//agents/plugins:agent-plugins",
-    ],
-)
-
-test_suite(
+py_tests_for_python_versions(
     name = "supported_python_versions",
-    tests = [
-        ":py-3.10",
-        ":py-3.11",
-        ":py-3.12",
-        ":py-3.13",
-        ":py-3.8",
-        ":py-3.9",
+    srcs = glob(["test_*.py"]),
+    data = glob(["datasets/**/*"]),
+    python_versions = [
+        "3.8",
+        "3.9",
+        "3.10",
+        "3.11",
+        "3.12",
+        "3.13",
     ],
+    requirements = {
+        "3.8": [req_3_8(req) for req in RUNTIME_REQUIREMENTS],
+        "3.9": [req_3_9(req) for req in RUNTIME_REQUIREMENTS],
+        "3.10": [req_3_10(req) for req in RUNTIME_REQUIREMENTS],
+        "3.11": [req_3_11(req) for req in RUNTIME_REQUIREMENTS],
+        "3.12": [req_3_12(req) for req in RUNTIME_REQUIREMENTS],
+        "3.13": [req_3_13(req) for req in RUNTIME_REQUIREMENTS],
+    },
+    deps = ["//agents/plugins:agent-plugins"],
 )
