--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -120,6 +120,8 @@ single_version_override(
         # https://github.com/aspect-build/rules_lint/pull/597
         "//bazel/patches:rules_lint-clang_tidy.patch",
         "//bazel/patches:rules_lint-groovy.patch",
+        # https://github.com/aspect-build/rules_lint/pull/689
+        "//bazel/patches:rules_lint-no_lint_tag_with_clang_tidy.patch",
     ],
     version = "2.0.0-beta.0",
 )
