--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -122,6 +122,8 @@ single_version_override(
         "//bazel/patches:rules_lint-groovy.patch",
         # https://github.com/aspect-build/rules_lint/pull/689
         "//bazel/patches:rules_lint-no_lint_tag_with_clang_tidy.patch",
+        # https://github.com/aspect-build/rules_lint/issues/690
+        "//bazel/patches:rules_lint-fix-ruff-sarif-output.patch",
     ],
     version = "2.0.0-beta.0",
 )
