--- a/buildscripts/scripts/stages.yml
+++ b/buildscripts/scripts/stages.yml
@@ -432,26 +432,6 @@ STAGES:
       TEXT_ON_SKIP: "No Werk code files changed"
       RESULT_CHECK_FILE_PATTERN: "results/werk_commands.txt"
 
-    - NAME: "Python ruff"
-      ONLY_WHEN_NOT_EMPTY: CHANGED_REFERENCE_IMAGE,CHANGED_FIND_PYTHON_FILES_SCRIPT,CHANGED_PYTHON_FILES,CHANGED_PYTHON_REQUIREMENTS,CHANGED_PYPROJECT_TOML_FILE,CHANGED_TESTS_MAKEFILE,CHANGED_RUN_UVENV_SCRIPT
-      DIR: "tests"
-      ENV_VARS:
-          RUFF_OUTPUT_FORMAT: "pylint"
-      COMMAND: "make test-ruff &> ${RESULTS}/ruff.txt"
-      BAZEL_LOCKS_AMOUNT: 1
-      TEXT_ON_SKIP: "Neither pyproject.toml nor Python files changed"
-      RESULT_CHECK_TYPE: "PYLINT"
-      RESULT_CHECK_FILE_PATTERN: "results/ruff.txt"
-
-    - NAME: "Python astrein"
-      ONLY_WHEN_NOT_EMPTY: CHANGED_REFERENCE_IMAGE,CHANGED_FIND_PYTHON_FILES_SCRIPT,CHANGED_PYTHON_FILES,CHANGED_PYTHON_REQUIREMENTS,CHANGED_PYPROJECT_TOML_FILE,CHANGED_TESTS_MAKEFILE
-      DIR: "tests"
-      COMMAND: "make test-astrein &> ${RESULTS}/astrein.txt"
-      BAZEL_LOCKS_AMOUNT: 1
-      TEXT_ON_SKIP: "Neither pyproject.toml nor Python files changed"
-      RESULT_CHECK_TYPE: "GCC"
-      RESULT_CHECK_FILE_PATTERN: "results/astrein.txt"
-
     - NAME: "Python Bandit"
       ONLY_WHEN_NOT_EMPTY: CHANGED_REFERENCE_IMAGE,CHANGED_FIND_PYTHON_FILES_SCRIPT,CHANGED_PYTHON_FILES,CHANGED_PYTHON_REQUIREMENTS,CHANGED_PYPROJECT_TOML_FILE,CHANGED_TESTS_MAKEFILE,CHANGED_RUN_UVENV_SCRIPT
       DIR: "tests"
@@ -829,6 +809,14 @@ STAGES:
       BAZEL_LOCKS_AMOUNT: 1
       TEXT_ON_SKIP: "inconditional"
       RESULT_CHECK_FILE_PATTERN: "results/format.txt"
+
+    - NAME: "Lint repository"
+      DIR: ""
+      COMMAND: "set -o pipefail && bazel lint --machine --fixes=false ... | bazel run //scripts:sarif_preparse > ${RESULTS}/lint.txt"
+      TEXT_ON_SKIP: "inconditional"
+      BAZEL_LOCKS_AMOUNT: 1
+      RESULT_CHECK_TYPE: "SARIF"
+      RESULT_CHECK_FILE_PATTERN: "results/lint.txt"
 
     - NAME: "Enforced package build"
       ONLY_WHEN_NOT_EMPTY: CHANGED_PYTHON_REQUIREMENTS,CHANGED_BAZEL_MODULES,CHANGED_BAZEL_FILES,CHANGED_MAKEFILE
