Quickfix after removing make targets
They still have callers.

CMK-21274

Change-Id: I2706f4f57d99643e613e9d4502c39ed14f7e50df

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -157,6 +157,14 @@ $(foreach VERS,$(AGENT_PLUGIN_PYTHON_VERSIONS_DOCKER),test-agent-plugin-unit-py$
 	    $$IMAGE_HASH \
 	    python$$PYTHON_VERSION -m pytest "/tests"
 
+.PHONY: test-ruff
+test-ruff:
+	@echo "This target is deprecated, use 'bazel lint [TARGET]' instead."
+
+.PHONY: test-astrein
+test-astrein:
+	@echo "This target is deprecated, use 'bazel lint [TARGET]' instead."
+
 test-semgrep:
 	$(SEMGREP) scan \
 	    $(SEMGREP_OUTPUT_ARGS) \
