Fix targets for community edition
The analysis phase fails in the community edition if we refer
non-existing targets.

CMK-28823

Change-Id: If479cc7bd6adb3457cc4b9b58cd29a5b166ad8e2

--- a/cmk/BUILD
+++ b/cmk/BUILD
@@ -295,7 +295,10 @@ py_library(
     srcs = srcs,
     imports = [".."],
     visibility = ["//tests:__subpackages__"],
-    deps = CMC_PROTO_DEPS + [
+    deps = select({
+        "@//:gpl+nonfree_repo": CMC_PROTO_DEPS,
+        "@//:gpl_repo": [],
+    }) + [
         "lib_cmk",
     ] + edition_python_deps[edition],
 ) for edition, srcs in [
@@ -347,7 +350,10 @@ py_wheel(
     # TODO(ml): cmk_version vs. PEP 440?
     version = "1+" + edition,
     visibility = ["//visibility:public"],
-    deps = CMC_PROTO_DEPS + [
+    deps = select({
+        "@//:gpl+nonfree_repo": CMC_PROTO_DEPS,
+        "@//:gpl_repo": [],
+    }) + [
         "lib_cmk",
         ":agents",
         ":checkman",
