Parse dependencies from .mk files in bazel
mk files are deployed and used in mutliple locations throught the repo.
They cannot be simply replaced by a .bzl file

CMK-24653

Change-Id: Ic9dd7cb301511d1aab99985a34158fc075f17c49

--- a/bazel/tools/BUILD
+++ b/bazel/tools/BUILD
@@ -99,3 +99,10 @@ bazel_env(
         "genhtml": "@lcov//:genhtml",
     },
 )
+
+py_binary(
+    name = "extract_os_packages",
+    srcs = ["extract_os_packages.py"],
+    main = "extract_os_packages.py",
+    visibility = ["//visibility:public"],
+)
