Make tags in docker_image_aliases branch relative for the 2.5.0 branching.
Change-Id: I4b7f5da1f4c0a786465d39ec73df7c037bdce9da

--- a/buildscripts/docker_image_aliases/IMAGE_ALMALINUX_10/meta.yml
+++ b/buildscripts/docker_image_aliases/IMAGE_ALMALINUX_10/meta.yml
@@ -1,2 +1,2 @@
 source: almalinux:10
-tag: artifacts.lan.tribe29.com:4000/almalinux:10-image-alias-master-c58f7f7067f
+tag: artifacts.lan.tribe29.com:4000/almalinux:10-image-alias-2.5.0-da4f4594fd5
