--- a/buildscripts/docker_image_aliases/IMAGE_ALMALINUX_9/meta.yml
+++ b/buildscripts/docker_image_aliases/IMAGE_ALMALINUX_9/meta.yml
@@ -1,2 +1,2 @@
 source: almalinux:9.2
-tag: artifacts.lan.tribe29.com:4000/almalinux:9.2-image-alias-master-f2fdb270d85
+tag: artifacts.lan.tribe29.com:4000/almalinux:9.2-image-alias-2.5.0-da4f4594fd5
