--- a/buildscripts/docker_image_aliases/IMAGE_ALPINE_3_22/meta.yml
+++ b/buildscripts/docker_image_aliases/IMAGE_ALPINE_3_22/meta.yml
@@ -1,2 +1,2 @@
 source: alpine:3.22
-tag: artifacts.lan.tribe29.com:4000/alpine:3.22-image-alias-master-aed3bf0f068
+tag: artifacts.lan.tribe29.com:4000/alpine:3.22-image-alias-2.5.0-da4f4594fd5
