--- a/buildscripts/docker_image_aliases/IMAGE_SLES_16/meta.yml
+++ b/buildscripts/docker_image_aliases/IMAGE_SLES_16/meta.yml
@@ -1,2 +1,2 @@
 source: registry.suse.com/bci/bci-base:16.0-12.1
-tag: artifacts.lan.tribe29.com:4000/sle16:16.0-12.1-image-alias-master-557fbe35f803
+tag: artifacts.lan.tribe29.com:4000/sle16:16.0-12.1-image-alias-2.5.0-da4f4594fd5
