--- a/buildscripts/docker_image_aliases/IMAGE_ALMALINUX_8/meta.yml
+++ b/buildscripts/docker_image_aliases/IMAGE_ALMALINUX_8/meta.yml
@@ -1,2 +1,2 @@
 source: almalinux:8.10
-tag: artifacts.lan.tribe29.com:4000/almalinux:8.10-image-alias-master-beefaf7416a
+tag: artifacts.lan.tribe29.com:4000/almalinux:8.10-image-alias-2.5.0-da4f4594fd5
