--- a/buildscripts/docker_image_aliases/IMAGE_BUSYBOX_LATEST/meta.yml
+++ b/buildscripts/docker_image_aliases/IMAGE_BUSYBOX_LATEST/meta.yml
@@ -1,2 +1,2 @@
 source: busybox:latest
-tag: artifacts.lan.tribe29.com:4000/busybox:latest-image-alias-master-0f4a544d4d1
+tag: artifacts.lan.tribe29.com:4000/busybox:latest-image-alias-2.5.0-da4f4594fd5
