--- a/buildscripts/docker_image_aliases/IMAGE_DEBIAN_12/meta.yml
+++ b/buildscripts/docker_image_aliases/IMAGE_DEBIAN_12/meta.yml
@@ -1,2 +1,2 @@
 source: debian:12
-tag: artifacts.lan.tribe29.com:4000/debian:12-image-alias-master-2795a997c8b
+tag: artifacts.lan.tribe29.com:4000/debian:12-image-alias-2.5.0-da4f4594fd5
