--- a/buildscripts/docker_image_aliases/IMAGE_HADOLINT/meta.yml
+++ b/buildscripts/docker_image_aliases/IMAGE_HADOLINT/meta.yml
@@ -1,2 +1,2 @@
 source: hadolint/hadolint
-tag: artifacts.lan.tribe29.com:4000/hadolint:latest-image-alias-master-0f4a544d4d1
+tag: artifacts.lan.tribe29.com:4000/hadolint:latest-image-alias-2.5.0-da4f4594fd5
