--- a/buildscripts/docker_image_aliases/IMAGE_ORACLE_DB_23C/meta.yml
+++ b/buildscripts/docker_image_aliases/IMAGE_ORACLE_DB_23C/meta.yml
@@ -1,2 +1,2 @@
 source: container-registry.oracle.com/database/free
-tag: artifacts.lan.tribe29.com:4000/free:latest-image-alias-master-b7da6490d2a
+tag: artifacts.lan.tribe29.com:4000/free:latest-image-alias-2.5.0-da4f4594fd5
