--- a/buildscripts/docker_image_aliases/IMAGE_PYTHON_3_12/meta.yml
+++ b/buildscripts/docker_image_aliases/IMAGE_PYTHON_3_12/meta.yml
@@ -1,2 +1,2 @@
 source: python:3.12-alpine3.21
-tag: artifacts.lan.tribe29.com:4000/python:3.12-alpine3.21-image-alias-master-f70e21e56b9
+tag: artifacts.lan.tribe29.com:4000/python:3.12-alpine3.21-image-alias-2.5.0-da4f4594fd5
