--- a/buildscripts/docker_image_aliases/IMAGE_SLES_15SP6/meta.yml
+++ b/buildscripts/docker_image_aliases/IMAGE_SLES_15SP6/meta.yml
@@ -1,2 +1,2 @@
 source: registry.suse.com/suse/sle15:15.6
-tag: artifacts.lan.tribe29.com:4000/sle15:15.6-image-alias-master-cc5ac6d5b27
+tag: artifacts.lan.tribe29.com:4000/sle15:15.6-image-alias-2.5.0-da4f4594fd5
