--- a/buildscripts/docker_image_aliases/IMAGE_SLES_15SP7/meta.yml
+++ b/buildscripts/docker_image_aliases/IMAGE_SLES_15SP7/meta.yml
@@ -1,2 +1,2 @@
 source: registry.suse.com/suse/sle15:15.7
-tag: artifacts.lan.tribe29.com:4000/sle15:15.7-image-alias-master-158d179f6d4
+tag: artifacts.lan.tribe29.com:4000/sle15:15.7-image-alias-2.5.0-da4f4594fd5
