--- a/buildscripts/docker_image_aliases/IMAGE_UBUNTU_22_04/meta.yml
+++ b/buildscripts/docker_image_aliases/IMAGE_UBUNTU_22_04/meta.yml
@@ -1,2 +1,2 @@
 source: ubuntu:22.04
-tag: artifacts.lan.tribe29.com:4000/ubuntu:22.04-image-alias-master-b12c0376bbf
+tag: artifacts.lan.tribe29.com:4000/ubuntu:22.04-image-alias-2.5.0-da4f4594fd5
